clusters/base/hello-world/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: default
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.dev.mikesupertrampster.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-world
                port:
                  number: 80
